# polyrader_cs2

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  eslint.config.js  knip.json  package-lock.json  package.json  turbo.json
.cursor/rules/: post-dev-next-steps.mdc
.github/workflows/: ci.yml  release.yml
.trae/documents/: DEVELOPMENT.md  PRD.md  RELEASE_NOTES_v0.2.0.md  architecture-overview.html  design-spec.md  landing.html  overview.md  screenshot.py  technical-architecture.md  ui-design.html
.trae/rules/: project_rules.md
docs/: release-guide.md  tauri-guide.md
docs/report/: e2e-design-audit.html  e2e-design-audit.json  e2e-prd-audit.html  e2e-prd-audit.json  llm-integration-report.html
scripts/: screenshot.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
