[package]
name = "polyrader-cs2"
version = "0.2.0"
description = "PolyRader CS2 — Polymarket CS2 Esports Prediction Analysis Tool"
authors = ["PolyRader Team"]
license = "MIT"
repository = "https://github.com/dutongxue/polyrader_cs2"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
dirs = "5"
rand = "0.8"
base64 = "0.22"
